Dpanel 2.2.0 Dpanel 2.2.1 Dpanel 2.2.2 Dpanel 2.2.3 Dpanel 2.2.4 Dpanel 2.2.5 Dpanel 2.2.6 Dpanel 2.2.7 Dpanel 2.2.8 Dpanel 2.2.9 Dpanel 2.2.10

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="bg-white shadow-sm rounded p-3">
-    <form class="row preloader-form" method="post">
+    <form class="preloader-form" method="post">
         {% csrf_token %}
         {% include 'inc/form.html'%}
         <div>
