--- a/templates/mysql/database.html
+++ b/templates/mysql/database.html
@@ -154,10 +154,10 @@
 {% else %}
     <div class="bg-white shadow-sm p-3 rounded text-center">
         <div class="fw-bold h5">
-            {% trans 'Mysql server not installed' %}
+            {% trans 'MySQL server not installed' %}
         </div>
         <button type="button" class="btn btn-warning btn-sm rounded-pill" id="install-mysql">
-            {% translate 'Install Mysql server now' %}
+            {% translate 'Install MySQL server now' %}
         </button>
     </div>
 <script>
