--- a/templates/account/password-change.html
+++ b/templates/account/password-change.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="bg-white shadow-sm rounded p-3">
-    <form class="row preloader-form" method="post">
+    <form class="preloader-form" method="post">
         {% csrf_token %}
         {% include 'inc/form.html'%}
         <div>
