--- a/templates/settings/more.html
+++ b/templates/settings/more.html
@@ -9,7 +9,7 @@
 <div id="dpanel-more" class="bg-white rounded shadow-sm p-3"></div>
 <script>
     jQuery.ajax({
-        url: "https://dpanel.de-ver.com/api/more",
+        url: "https://dpanel.top/api/more",
         success: function (data) {
             jQuery('#dpanel-more').html(data);
         },
