--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/static/favicon.png"/>
+    <link rel="icon" type="image/png" href="{% static 'logo.png' %}"/>
     <title>DPanel - {% block title%}{% endblock %}</title>
 
     {% if LANGUAGE_BIDI == True %}
@@ -67,8 +67,8 @@
     {% block content %}{% endblock %}
 
     <div class="row mt-4">
-        <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; <a href="https://dpanel.de-ver.com" class="fw-bold" target="_blank">DPanel</a>  - {% now 'Y' %}</div>
-        <div class="col-md text-center text-md-end"><b><a href="https://dpanel.de-ver.com" class="fw-bold" target="_blank">DPanel</a> 2.5</b> With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
+        <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; <a href="https://dpanel.top" class="fw-bold" target="_blank">DPanel</a>  - {% now 'Y' %}</div>
+        <div class="col-md text-center text-md-end"><b><a href="https://dpanel.top" class="fw-bold" target="_blank">DPanel</a> 2.5</b> With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
     </div>
 </div>
 
