--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -4,18 +4,23 @@
 <div class="container">
     <div class="bg-white rounded shadow-sm py-1 px-3 my-4">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="{% url 'apps' %}">DPanel</a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">DPanel</a>
             <button type="button" class="fs-4 navbar-toggler border-0 p-0 shadow-none" data-bs-toggle="offcanvas" data-bs-target="#MainNavbar">
                 <i class="bi bi-list pointer"></i>
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="MainNavbar" aria-labelledby="MainNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="MainNavbarLabel">{{config.company_name}}</h5>
+                    <h5 class="offcanvas-title" id="MainNavbarLabel">DPanel</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav w-100">
                         {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'dashboard' %}">
+                                {% trans 'Dashboard' %}
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'apps' %}">
                                 {% trans 'Apps' %}
@@ -23,7 +28,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'mysql_databases' %}">
-                                {% trans 'MySQL' %}
+                                {% trans 'Databases' %}
                             </a>
                         </li>
                         <li class="nav-item">
