--- a/templates/mysql/database.html
+++ b/templates/mysql/database.html
@@ -22,7 +22,7 @@
                 <input class="form-control" value="{{database.name}}" readonly>
                 <button type="button" class="copy-this pointer btn btn-dark rounded-end-pill"
                         onclick="copy_this('{{database.name}}', '{% trans 'Database name copied' %}')">
-                    <i class="bi bi-clipboard"></i>
+                    <i class="bi bi-copy"></i>
                 </button>
             </div>
         </div>
@@ -34,7 +34,7 @@
                 <input class="form-control" value="{{database.username}}" readonly>
                 <button type="button" class="copy-this pointer btn btn-dark rounded-end-pill"
                         onclick="copy_this('{{database.username}}', '{% trans 'Database user name copied' %}')">
-                    <i class="bi bi-clipboard"></i>
+                    <i class="bi bi-copy"></i>
                 </button>
             </div>
         </div>
@@ -49,7 +49,7 @@
         </button>
         <button type="button" class="copy-this pointer btn btn-dark rounded-end-pill"
                 onclick="copy_this('{{database.password}}', '{% trans 'Database user password copied' %}')">
-            <i class="bi bi-clipboard"></i>
+            <i class="bi bi-copy"></i>
         </button>
     </div>
         </div>
