--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -17,11 +17,6 @@
                     <ul class="navbar-nav w-100">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'dashboard' %}">
-                                {% trans 'Dashboard' %}
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'apps' %}">
                                 {% trans 'Apps' %}
                             </a>
@@ -49,11 +44,11 @@
                         {% endif %}
                     </ul>
                     <ul class="navbar-nav me-lg-2">
+                        {% if user.is_authenticated %}
                         <li class="nav-item">
-                            {% if user.is_authenticated %}
                             <div class="nav-link dropdown" title="{% trans 'Profile' %}">
                                 <div class="pointer" id="dropdownProfile" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-person fs-5"></i>
+                                    <i class="bi bi-person fs-5 float-lg-end"></i>
                                 </div>
                                 <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownProfile">
                                     <li>
@@ -81,12 +76,12 @@
                                     </li>
                                 </ul>
                             </div>
-                            {% endif %}
                         </li>
+                        {% endif %}
                         <li class="nav-item">
                             <div class="nav-link dropdown" title="{% trans 'Language' %}">
                                 <div class="pointer" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-translate fs-5"></i>
+                                    <i class="bi bi-translate fs-5 float-lg-end"></i>
                                 </div>
                                 <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownLanguage">
                                     {% for language in languages %}
