--- a/templates/mysql/action.html
+++ b/templates/mysql/action.html
@@ -17,26 +17,26 @@
         <li>
            <span onclick="open_link_confirm('{% url 'mysql_backup_create' database.serial %}', '{% trans 'Database' %}: {{database.name}}', '{% trans 'Do you want to create backup for this database?' %}')" class="dropdown-item pointer">
                {% trans 'Create backup' %}
-               <i class="bi bi-back float-end text-info"></i>
+               <i class="bi bi-floppy float-end"></i>
             </span>
         </li>
         <li><div class="dropdown-divider"></div></li>
         <li>
             <span class="dropdown-item pointer database-restore" onclick="document.getElementById('backup-import-{{database.serial}}').click()">
                 {% trans 'Import backup' %}
-                <i class="bi bi-pc-display float-end text-success"></i>
+                <i class="bi bi-pc-display float-end"></i>
             </span>
         </li>
         <li><div class="dropdown-divider"></div></li>
         <li>
             <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_database_password_change' database.serial %}', '{% trans 'User' %}: {{database.username}}', '{% trans 'Do you want to change password for this database user?' %}')">
                 {% trans 'Password' %}
-                <i class="bi bi-arrow-clockwise float-end"></i>
+                <i class="bi bi-database-lock float-end"></i>
             </span>
         </li>
         <li><div class="dropdown-divider"></div></li>
         <li>
-            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_database_reset' database.serial %}', '{% trans 'Reset database' %}: {{database.name}}', '', true)">
+            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_database_reset' database.serial %}', '{% trans 'Reset database' %}: {{database.name}}', '{% trans 'All data will be deleted. Do you want to continue?' %}', true)">
                 {% trans 'Reset' %}
                 <i class="bi bi-recycle float-end"></i>
             </span>
