--- a/templates/mysql/list.html
+++ b/templates/mysql/list.html
@@ -39,7 +39,7 @@
                             <i class="bi bi-eye"></i>
                         </button>
                         <button type="button" class="copy-this pointer btn btn-dark rounded-end-pill" onclick="copy_this('{{database.password}}', '{% trans 'Database user password copied' %}')">
-                            <i class="bi bi-clipboard"></i>
+                            <i class="bi bi-copy"></i>
                         </button>
                     </div>
                 </td>
