--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
             </div>
             <div class="col-auto">
                 {% block title_button %}{% endblock %}
+                {% include 'inc/manage.html' %}
             </div>
         </div>
     </div>
