--- a/templates/file/upload.html
+++ b/templates/file/upload.html
@@ -1,10 +1,9 @@
 {% load i18n %}
 <div class="bg-white shadow-sm rounded p-3">
-    <form method="post" action="{% url 'app_files_ajax_upload' %}" id="remote-form" class="mb-3">
+    <form method="post" action="{% url 'files_ajax_upload' %}" id="remote-form" class="mb-3">
         <div class="input-group mx-auto" style="width: 500px; max-width: 100%;">
             <input class="form-control" id="remote-file" type="url" name="remote_file" placeholder="{% trans 'Get file from URL' %}">
             <input type="hidden" name="path" value="{{path}}">
-            <input type="hidden" name="app" value="{{app.serial}}">
             {% csrf_token %}
             <button class="btn btn-light border" type="submit" name="remote">
                 {% trans 'Get' %}
@@ -12,7 +11,7 @@
             </button>
         </div>
     </form>
-    <form method="post" action="{% url 'app_files_ajax_upload' %}" class="dropzone border rounded" id="file-upload-dropzone">
+    <form method="post" action="{% url 'files_ajax_upload' %}" class="dropzone border rounded" id="file-upload-dropzone">
         <input name="path" id="upload-path" value="{{path}}" hidden>
         {% csrf_token %}
     </form>
