--- a/templates/domain/domains.html
+++ b/templates/domain/domains.html
@@ -1,28 +1,28 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% translate 'Apps' %} {% endblock%}
-{% block page_title %}{% trans 'All apps' %}{% endblock %}
+{% block title %} {% translate 'Domains' %} {% endblock%}
+{% block page_title %}{% trans 'All domains' %}{% endblock %}
 
 {% block title_button %}
-{% if status.uwsgi_status %}
-<a class="btn btn-primary btn-sm rounded-pill" href="{% url 'app_new' %}">
-    {% translate 'New app' %}
+{% if status.nginx_status %}
+<a class="btn btn-primary btn-sm rounded-pill" href="{% url 'domain_new' %}">
+    {% translate 'New domain' %}
     <i class="bi bi-rocket-takeoff"></i>
 </a>
 {% endif %}
 {% endblock %}
 {% block content %}
 <div class="bg-white shadow-sm rounded">
-    {% if status.uwsgi_status %}
-        {% if apps %}
-            {% include 'app/list.html' %}
-        {% include 'inc/paginator.html' with query=apps %}
+    {% if status.nginx_status %}
+        {% if domains %}
+            {% include 'domain/list.html' %}
+        {% include 'inc/paginator.html' with query=domains %}
         {% else %}
         <div class="h5 text-center p-3">
-            {% trans 'No apps found' %}
+            {% trans 'No domains found' %}
             <div class="">
-                <a href="{% url 'app_new' %}">
+                <a href="{% url 'domain_new' %}">
                     <i class="bi bi-folder-plus fs-1"></i>
                 </a>
             </div>
@@ -32,9 +32,9 @@
         <div class="h5 text-center p-3">
             {% trans 'You need to install uwsgi and nginx first' %}
             <div class="mt-3">
-                {% if not status.uwsgi_status %}
-                <button id="install-uwsgi" class="install-server btn btn-warning rounded-pill" data-name="uwsgi">
-                    {% translate 'Install uwsgi' %}
+                {% if not status.nginx_status %}
+                <button id="install-nginx" class="install-server btn btn-info rounded-pill" data-name="nginx">
+                    {% translate 'Install nginx' %}
                     <i class="bi bi-play"></i>
                 </button>
                 {% endif %}
