--- a/templates/file/list.html
+++ b/templates/file/list.html
@@ -57,14 +57,14 @@
                 </div>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                        <a class="dropdown-item" href="{% url 'app_file_preview'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'file_preview'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Preview' %}
                             <i class="bi bi-eye float-end"></i>
                         </a>
                     </li>
                     <li><hr class="dropdown-divider"></li>
                     <li>
-                        <a class="dropdown-item" href="{% url 'app_file_download'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'file_download'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Download' %}
                             <i class="bi bi-arrow-bar-down float-end"></i>
                         </a>
@@ -72,7 +72,7 @@
                     <li><hr class="dropdown-divider"></li>
                     {% if file.lower|slice:'-3:' == "txt" or file.lower|slice:'-2:' == "py" or file.lower|slice:'-3:' == "log" or file.lower|slice:'-3:' == "ini" or file.lower|slice:'-4:' == "html" or file.lower|slice:'-3:' == "css" or file.lower|slice:'-2:' == "js" or file.lower|slice:'-4:' == "json" %}
                     <li>
-                        <a class="dropdown-item" href="{% url 'app_file_edit'%}?file={{path}}/{{file}}" target="_blank">
+                        <a class="dropdown-item" href="{% url 'file_edit'%}?file={{path}}/{{file}}" target="_blank">
                             {% trans 'Edit' %}
                             <i class="bi bi-pencil float-end"></i>
                         </a>
