--- a/templates/inc/scripts.html
+++ b/templates/inc/scripts.html
@@ -132,6 +132,47 @@
 </script>
 
 <script>
+    jQuery(".install-server").click(function() {
+        server_name = jQuery(this).data('name');
+        Swal.fire({
+            title: '{% translate 'Install' %} ' + server_name,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#1d1e2c',
+            cancelButtonColor: '#dc3545',
+            confirmButtonText: '{% translate 'Yes, install it!' %}',
+            allowOutsideClick: false,
+        }).then((result) => {
+            if (result.isConfirmed) {
+                jQuery('.loading-preloader').show();
+                jQuery.ajax({
+                    type: "POST",
+                    data: {
+                        'csrfmiddlewaretoken': '{{csrf_token}}',
+                        [server_name + '_install']: true
+                    },
+                    success: function (response) {
+                        jQuery('.loading-preloader').hide();
+                        Swal.fire({
+                            icon: response.success ? 'success' : 'error',
+                            text: response.message,
+                            allowOutsideClick: false,
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "{% url 'domains' %}"
+                            }
+                        });
+                    },
+                    error: function () {
+                        jQuery('.loading-preloader').hide();
+                        alert('{% trans "An error occurred while submitting the form" %}');
+                    }
+                });
+            }
+        });
+    });
+</script>
+<script>
     jQuery('body').on('click', '#check-updates', function(){
         jQuery('.loading-preloader').show();
         $.getJSON('https://dpanel.top/api/update/check', function(data){
@@ -257,5 +298,85 @@
                 reload_folder();
             }
         });
+    });
+</script>
+
+<script>
+    jQuery('body').on('click', '.clickable-folder', function(){
+        jQuery.ajax({
+             type: "GET",
+             url: "{% url 'files_ajax' %}?path="+jQuery(this).attr('data-path'),
+             beforeSend: function(){
+                jQuery('.loading-preloader-2').show();
+             },
+             success: function(data){
+                jQuery('#files').html(data);
+                jQuery('#upload-path').val(jQuery('#path').val());
+                jQuery('.loading-preloader-2').hide();
+             }
+        });
+    });
+
+    jQuery('body').on('click', '.extract-zip', function(){
+        jQuery.ajax({
+             type: "GET",
+             url: "{% url 'zip_extract' %}?path="+jQuery('#path').val()+"&file="+jQuery(this).attr('data-file')+"&folder="+jQuery(this).attr('data-folder'),
+             beforeSend: function(){
+                jQuery('.loading-preloader-2').show();
+             },
+             success: function(data){
+                reload_folder();
+                jQuery('.loading-preloader-2').hide();
+             }
+        });
+    });
+
+    jQuery('body').on('click', '.remove-file', function(){
+        Swal.fire({
+            title: '{% trans "Are you sure?" %}',
+            text: '{% trans "This risk cannot be reversed." %}',
+            showDenyButton: true,
+            confirmButtonText: '{% trans "Continue" %}',
+            denyButtonText: '{% trans "Cancel" %}',
+        }).then((result) => {
+            if (result.isConfirmed) {
+                jQuery.ajax({
+                    type: "GET",
+                    url: "{% url 'file_remove' %}?file="+jQuery(this).attr('data-file'),
+                    beforeSend: function(){
+                        jQuery('.loading-preloader-2').show();
+                    },
+                    success: function(data){
+                        reload_folder();
+                        jQuery('.loading-preloader-2').hide();
+                    }
+                });
+            }
+        });
+    });
+
+    function reload_folder(){
+        jQuery.ajax({
+            type: "GET",
+            url: "{% url 'files_ajax' %}?path="+jQuery('#path').val(),
+            success: function(data){
+                jQuery('#files').html(data);
+                jQuery('#upload-path').val(jQuery('#path').val());
+                jQuery('.loading-preloader-2').hide();
+            }
+        });
+    }
+</script>
+
+<script>
+    jQuery('.domain-validator').on('change', function () {
+        domain = jQuery(this).val();
+        if (domain){
+            domain = domain.replace('https://', '').replace('http://', '');
+            if (domain.endsWith('/')) {
+                domain = domain.slice(0, -1);
+            }
+            jQuery(this).val(domain);
+        }
     });
 </script>
